feat: GCP 통합 및 서비스 계정 검증 기능 구현